# Studienarbeit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  startRealSensor.bat  startSimulation.bat  startall.bat
Documents/: DatenEinlesePy.drawio  GradDesc.drawio  SysArch.drawio  thema.txt
src/Backend/: Types.h  calc.cpp  calc.h  calc_test.cpp  display.cpp  display.h  kalman.cpp  kalman.h  main.cpp  painthelper.cpp  painthelper.h  socket.cpp  socket.h  stringparser.cpp  stringparser.h  stringparser_test.cpp
src/DataGrabberPy/: mockBluetooth.py  testbluetoothwithsocket.py  ui.py
src/DataRetrievalAndUi/: Sensor_Config.json  getAnchorData.py  mockBluetooth.py  ui.py
src/archive/old/: Py_BLE_DirectionFinding_T3200_2023.py
src/archive/test/backforth/: testsocketbackforth.cpp
src/archive/test/cppUI/: main.cpp
src/archive/test/nDimDist/: nDimDist.cpp
src/archive/test/pythonUI/: ui.py
src/archive/test/testpixmap/: pixmap.cpp
src/archive/test/testwebsocket/: pytestclient3.py  testsocket3.cpp
src/archive/test/withbluetooth/: testbluetoothwithsocket.cpp
src/archive/test/wsPingPong/: echo_client.c  echo_server.c
src/archive/testSocket/backforth/: pybackForth.py
src/archive/testSocket/testpixmap/: painthelper.cpp  painthelper.h  pixmap.cpp
src/archive/testSocket/withbluetooth/: testbluetoothwithsocket.py
src/new/: calc.cpp  calc.h  display.cpp  display.h  main.cpp  python_script.py  serial.cpp  serial.h  test_python.cpp
src/new/testSocket/: testbluetoothwithsocket.py  testsocket3.cpp  testsocketbackforth.cpp
src/old/: Py_BLE_DF_T3200_2023_standalone.py  Py_BLE_DirectionFinding_T3200_2023.py
